# WarrenCowleyParameters

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml  release.yml
examples/: compute_wc.py  fcc.dump
src/WarrenCowleyParameters/: __init__.py
tests/: test_modifier.py
